--- a/package.json
+++ b/package.json
@@ -2,24 +2,24 @@
     "name": "elastic.js",
     "description": "Javascript API for ElasticSearch",
     "version": "1.0.0",
-    "homepage": "https://github.com/fullscale/cloud9-javascript-api",
+    "homepage": "https://github.com/fullscale/elastic.js",
     "keywords": ["elasticsearch", "search", "elasticjs", "elastic", "elastic search", "es", "ejs"],
     "repository": {
         "type": "git",
-        "url": "git://github.com/fullscale/cloud9-javascript-api.git"
+        "url": "git://github.com/fullscale/elastic.js.git"
     },
     "bugs": {
-        "url": "https://github.com/fullscale/cloud9-javascript-api/issues"
+        "url": "https://github.com/fullscale/elastic.js/issues"
     },
     "licenses": [
         {
             "type": "MIT",
-            "url": "https://github.com/fullscale/cloud9-javascript-api/blob/master/LICENSE-MIT"
+            "url": "https://github.com/fullscale/elastic.js/blob/master/LICENSE-MIT"
         }
     ],
     "author": {
         "name": "FullScale Labs, LLC",
-        "url": "https://github.com/fullscale/cloud9-javascript-api/blob/master/AUTHORS.txt"
+        "url": "https://github.com/fullscale/elastic.js/blob/master/AUTHORS.txt"
     },
     "scripts": {
         "test": "grunt test"
