Added colorized output for the Node.js example
* Added `color.js` into dependencies
* Updated documentation
* Added ANSI colorization into the console output

--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
         "test": "grunt test",
         "prepublish": "cp dist/elastic.js dist/elastic-node-client.js ."
     },
+    "dependencies" : {
+        "colors": "~0.6"
+    },
     "devDependencies": {
         "grunt": "~0.3.17"
     }
