--- a/package.json
+++ b/package.json
@@ -31,6 +31,11 @@
         "colors": "~0.6"
     },
     "devDependencies": {
-        "grunt": "~0.3.17"
+        "grunt": "~0.4.x",
+        "grunt-contrib-concat": "~0.1.x",
+        "grunt-contrib-jshint": "~0.1.x",
+        "grunt-contrib-nodeunit": "~0.1.x",
+        "grunt-contrib-uglify": "~0.1.x",
+        "matchdep": "~0.1.x"
     }
 }
