Update test grunt test command to use nodeunit.

--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   ],
   "main": "elastic.js",
   "scripts": {
-    "test": "grunt test",
+    "test": "grunt nodeunit",
     "prepublish": "cp dist/elastic.js dist/elastic-node-client.js ."
   },
   "dependencies": {
