fix multiple errors on TopHitsAggregation add scriptid for ScriptScoreFunction and fix test

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
+# Logs
+logs
+*.log
+
+# Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
+.grunt
+
+# Users Environment Variables
+.lock-wscript
+.idea
+
 dist/docs
 node_modules/
+
+
