updated files section in package.json

--- a/package.json
+++ b/package.json
@@ -30,6 +30,12 @@
     "url": "https://github.com/fullscale/elastic.js/blob/master/AUTHORS"
   },
   "files": [
+    "elastic-angular-client.js",
+    "elastic-angular-client.min.js",
+    "elastic-extjs-client.js",
+    "elastic-extjs-client.min.js",
+    "elastic-jquery-client.js",
+    "elastic-jquery-client.min.js",
     "elastic-node-client.js",
     "elastic.js"
   ],
